Fixed the responsiviness of the Contact Form on small devices.

--- a/css/style.css
+++ b/css/style.css
@@ -443,6 +443,7 @@ button {
 .input--textarea {
 	min-height: 170px;
 	max-height: 12em;
+	max-width: 100%;
 	resize: vertical;
 }
 
